--- a/style.css
+++ b/style.css
@@ -63,3 +63,6 @@ img{
     padding-left: 10px; /* Отступ слева */
     padding-bottom: 10px; /* Отступ снизу */
 }
+
+
+/*пиапавпзпарполрппщлапплжавдлпавпавпдадпадаад*/
