--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ header div{
     display: flex;
     font-size: 17px;
     justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
     
     
 }
@@ -37,6 +39,15 @@ header a{
     text-decoration: none;
     color: white;
     margin: 2%;
+}
+#id{
+    text-decoration: none;
+    color: red;
+    margin: 2%;
+}
+header a:hover{
+    text-decoration: none;
+    color: red;
 }
 
 main{
