--- a/style.css
+++ b/style.css
@@ -73,6 +73,18 @@ main p{
     margin-right: 20%;
     text-indent: 30px;
 }
+h2{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+h3{
+    margin-left: 20%;
+    margin-right: 20%;
+    font-weight: 600;
+}
+hr{
+    color: white;
+}
 footer{
     width: 100%;
     height: 50px;
@@ -98,4 +110,8 @@ img{
 }
 
 
-/*пиапавпзпарполрппщлапплжавдлпавпавпдадпадаад*/
+audio{
+    border-radius: 0px;
+    margin-left: 20%;
+    margin-right: 20%;
+}
