--- a/contacts/style.css
+++ b/contacts/style.css
@@ -105,18 +105,14 @@ footer a:hover{
     text-decoration: none;
     color: red;
 }
-img{
-    float: right; /* Обтекание картинки по левому краю */
-    padding-left: 10px; /* Отступ слева */
-    padding-bottom: 10px; /* Отступ снизу */
-} #ussr{
-    padding-left:0px; /* Отступ слева */
-    padding-bottom: 0px; /* Отступ снизу */
-}
+
 
 
 audio{
     border-radius: 0px;
     margin-left: 20%;
     margin-right: 20%;
+}
+#social{
+    text-align: center;
 }
