--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, html{
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
     background-color: black;
-    font-size: 14px;
+    font-size: 15px;
     height: 100%;
 }
 
@@ -74,7 +74,10 @@ main p{
     margin-right: 15%;
     text-indent: 30px;
 }
-
+#gimn{
+    margin-left: 15%;
+    margin-right: 15%;
+}
 h2{
     margin-left: 20%;
     margin-right: 20%;
@@ -109,7 +112,8 @@ img{
     float: right; /* Обтекание картинки по левому краю */
     padding-left: 10px; /* Отступ слева */
     padding-bottom: 10px; /* Отступ снизу */
-} #ussr{
+} 
+#ussr{
     padding-left:0px; /* Отступ слева */
     padding-bottom: 0px; /* Отступ снизу */
 }
