--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ main p{
     margin-left: 15%;
     margin-right: 15%;
 }
+h1{
+    margin-left: 20%;
+    margin-right: 20%;
+}
 h2{
     margin-left: 20%;
     margin-right: 20%;
