--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ main{
 
 }
 main p{
-    margin-left: 15% auto;
-    margin-right: 15% auto;
+    margin-left: 15% ;
+    margin-right: 15% ;
     text-indent: 30px;
 }
 #gimn{
