--- a/country/russia/style.css
+++ b/country/russia/style.css
@@ -40,6 +40,11 @@ header a{
     color: white;
     margin: 2%;
 }
+div a{
+    text-decoration: none;
+    color: white;
+    margin: 2%;
+}
 #id{
     text-decoration: none;
     color: red;
@@ -120,9 +125,7 @@ img{
     padding-bottom: 0px; /* Отступ снизу */
 }
 
-
-audio{
-    border-radius: 0px;
-    margin-left: 20%;
-    margin-right: 20%;
+.ussr{
+    background-color: black;
+    color: white;
 }
