--- a/country/style.css
+++ b/country/style.css
@@ -129,3 +129,13 @@ footer a:hover{
 .kal{
     width: 100%;
 }
+div a{
+    text-decoration: none;
+    color: white;
+    margin: 2%;
+}
+div a:hover{
+    text-decoration: none;
+    color: red;
+    margin: 2%;
+}
