--- a/putin/m/style.css
+++ b/putin/m/style.css
@@ -3,15 +3,15 @@
     margin: 0%;
 }
 header{
-    width: 240px;
+    width:100%;
     background-color: brown;
 }
 main{
-    width: 240px;
+    width: 100%;
     background-color: #552343;
 }
 footer{
-    width: 240px;
+    width: 100%;
     background-color: darkblue;
 }
 body, html{
