--- a/putin/m/style.css
+++ b/putin/m/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0%;
     margin: 0%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 header{
     width:100%;
@@ -17,4 +18,10 @@ footer{
 body, html{
     background: black;
     color: white;
+}
+
+button:hover{
+    background: red;
+    color: white;
+    border-radius: 40px;
 }
