--- a/contacts/style.css
+++ b/contacts/style.css
@@ -6,7 +6,7 @@ body, html{
     
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
-    background-color: black;
+    background: black;
     font-size: 14px;
     height: 100%;
 }
