--- a/putin/m/style.css
+++ b/putin/m/style.css
@@ -25,4 +25,7 @@ button:hover{
     background: red;
     color: white;
     border-radius: 40px;
+    
+    border-color: #45859600;
+    border: solid 0px;
 }
