--- a/putin/m/style.css
+++ b/putin/m/style.css
@@ -21,11 +21,18 @@ body, html{
     color: white;
 }
 
+
+button{
+    background: red;
+    color: white;
+    border-radius: 40px;
+    border-color: #45859600;
+    border: solid 0px;
+}
 button:hover{
     background: red;
     color: white;
     border-radius: 40px;
-    
     border-color: #45859600;
     border: solid 0px;
 }
