--- a/contacts/style.css
+++ b/contacts/style.css
@@ -116,3 +116,12 @@ audio{
 #social{
     text-align: center;
 }
+div a{
+    text-decoration: none;
+    color: white;
+    
+}
+div a:hover{
+    text-decoration: none;
+    color: red;
+}
