--- a/legal/confidential/style.css
+++ b/legal/confidential/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0%;
     padding: 0%;
+    
 }
 body, html{
     
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
-    background-color: black;
+    background: black;
     font-size: 15px;
     height: 100%;
 }
@@ -162,6 +163,18 @@ footer a:hover{
 .center{
     text-align: center;
 }
+ol {
+    /* убираем стандартную нумерацию */
+    list-style: none;
+    /* Идентифицируем счетчик и даем ему имя li. Значение счетчика не указано - по умолчанию оно равно 0 */
+    counter-reset: li;
+ }
+ li:before {
+    /* Определяем элемент, который будет нумероваться — li. Псевдоэлемент before указывает, что содержимое, вставляемое при помощи свойства content, будет располагаться перед пунктами списка. Здесь же устанавливается значение приращения счетчика (по умолчанию равно 1). */
+    counter-increment: li;
+    /* С помощью свойства content выводится номер пункта списка. counters() означает, что генерируемый текст представляет собой значения всех счетчиков с таким именем. Точка в кавычках добавляет разделяющую точку между цифрами, а точка с пробелом добавляется перед содержимым каждого пункта списка */
+    content: counters(li, ".") ". ";
+ }
 
 
 
