--- a/country/russia/gos-simvolika/style.css
+++ b/country/russia/gos-simvolika/style.css
@@ -125,6 +125,11 @@ footer a:hover{
     padding-left: 10px; /* Отступ слева */
     padding-bottom: 10px; /* Отступ снизу */
 } 
+.photol{
+    float: left; /* Обтекание картинки по левому краю */
+    padding-left: 10px; /* Отступ слева */
+    padding-bottom: 10px; /* Отступ снизу */
+}
 #ussr{
     padding-left:0px; /* Отступ слева */
     padding-bottom: 0px; /* Отступ снизу */
@@ -154,4 +159,7 @@ footer a:hover{
 }
 .gimn{
     text-align: center;
+}
+.flags{
+    
 }
