--- a/country/russia/gos-simvolika/style.css
+++ b/country/russia/gos-simvolika/style.css
@@ -98,6 +98,7 @@ h3{
     margin-left: 20%;
     margin-right: 20%;
     font-weight: 600;
+    text-align: center;
 }
 hr{
     color: white;
@@ -161,5 +162,5 @@ footer a:hover{
     text-align: center;
 }
 .flags{
-    
+    color: white;
 }
