--- a/country/russia/gos-simvolika/style.css
+++ b/country/russia/gos-simvolika/style.css
@@ -190,5 +190,7 @@ border-radius: 20px;
 }
 .pres {
     border-radius: 20px;
+    border: solid 5px;
+    border-color:  red;
     width: 250px;
 }
