--- a/country/ukraine/style.css
+++ b/country/ukraine/style.css
@@ -121,7 +121,7 @@ footer a:hover {
     color: red;
 }
 
-img {
+.photo {
     float: right;
     /* Обтекание картинки по левому краю */
     padding-left: 10px;
