--- a/country/style.css
+++ b/country/style.css
@@ -96,9 +96,7 @@ h3 {
     font-weight: 600;
 }
 
-hr {
-    color: white;
-}
+
 
 footer {
     width: 100%;
@@ -165,15 +163,24 @@ footer>div {
     background-color: rgb(51, 51, 51);
     border: solid 5px;
     border-radius: 40px;
+    border-bottom-color: green;
+    border-top-color: green;
 }
 
 .glava {
     margin: 1%;
 }
-
+.flags{
+    border-radius: 3px;
+}
 .pres {
-    border-radius: 20px;
+    border-radius: 20px ;
     width: 250px;
     border: solid 5px;
     border-color: red;
+
+}
+.gorbach{
+    
+    background-color: green;
 }
