--- a/country/style.css
+++ b/country/style.css
@@ -96,8 +96,6 @@ h3 {
     font-weight: 600;
 }
 
-
-
 footer {
     width: 100%;
     height: 50px;
@@ -159,7 +157,7 @@ footer>div {
 
 .president {
     color: white;
-    text-align: center;
+   text-align: center;
     background-color: rgb(51, 51, 51);
     border: solid 5px;
     border-radius: 40px;
@@ -170,17 +168,26 @@ footer>div {
 .glava {
     margin: 1%;
 }
-.flags{
+.flags {
     border-radius: 3px;
 }
 .pres {
-    border-radius: 20px ;
+    border-radius: 20px;
     width: 250px;
     border: solid 5px;
     border-color: red;
-
+  
+  
 }
-.gorbach{
-    
-    background-color: green;
+.press{
+    width: 300px;
+    text-align: center;
+  margin: auto;
+    border-radius: 20px;
+    border: solid 5px;
+    border-color: red;
+}
+.russia{
+    background: linear-gradient(white, blue, red);
+    width: 30px;
 }
