--- a/country/style.css
+++ b/country/style.css
@@ -157,34 +157,40 @@ footer>div {
 
 .president {
     color: white;
-   text-align: center;
-    background-color: rgb(51, 51, 51);
+    text-align: center;
+    background: linear-gradient(to top right, rgb(51, 0, 0), rgb(55, 9, 9), rgb(58, 9, 9), rgb(62, 8, 8), rgb(65, 42, 8), rgb(81, 8, 8), rgb(8, 72, 98), rgb(8, 76, 114), rgb(8, 79, 130), rgb(7, 83, 146), rgb(7, 86, 163), rgb(7, 90, 179));
+    ;
     border: solid 5px;
     border-radius: 40px;
     border-bottom-color: green;
     border-top-color: green;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .glava {
     margin: 1%;
 }
+
 .flags {
     border-radius: 3px;
 }
+
 .pres {
     border-radius: 20px;
     width: 250px;
-    border: solid 5px;
-    border-color: red;
-  
-  
-}
-.press{
-    width: 300px;
-    text-align: center;
-  margin: auto;
-    border-radius: 20px;
+    padding: auto;
     border: solid 5px;
     border-color: red;
 }
 
+.press {
+    width: 300px;
+    text-align: center;
+    margin: auto;
+    border-radius: 20px;
+    border: solid 5px;
+    border-color: red;
+}
