--- a/country/belarus/gos-simvolika/style.css
+++ b/country/belarus/gos-simvolika/style.css
@@ -99,7 +99,7 @@ hr{
 }
 footer{
     width: 100%;
-    height: 50px;
+    height: фгещ;
     background: #dad9d9 ;
     display: flex;
     justify-content: space-around;
