--- a/country/dni/style.css
+++ b/country/dni/style.css
@@ -104,7 +104,7 @@ hr{
 }
 footer{
     width: 100%;
-    height: 50px;
+    height: auto;
     background: #dad9d9 ;
     display: flex;
     justify-content: space-around;
