--- a/country/ukraine/style.css
+++ b/country/ukraine/style.css
@@ -102,7 +102,7 @@ hr {
 
 footer {
     width: 100%;
-    height: 50px;
+    height: auto;
     background: #dad9d9;
     display: flex;
     justify-content: space-around;
