--- a/legal/confidential/style.css
+++ b/legal/confidential/style.css
@@ -115,7 +115,7 @@ hr{
 }
 footer{
     width: 100%;
-    height: 50px;
+    height: auto;
     background: #dad9d9 ;
     display: flex;
     justify-content: space-around;
