--- a/country/style.css
+++ b/country/style.css
@@ -137,7 +137,10 @@ footer a:hover{
 .kal {
     width: 100%;
 }
-
+img{
+    width: 100%;
+    border-radius: 20px;
+}
 div a {
     text-decoration: none;
     color: white;
