--- a/country/russia/gos-simvolika/style.css
+++ b/country/russia/gos-simvolika/style.css
@@ -3,21 +3,7 @@
     padding: 0%;
 }
 
-@media (max-width: 750px) and (min-width: 0px) {
-    main {
-        background: rgb(213, 43, 30);
-        background: linear-gradient(45deg, rgba(213, 43, 30, 1) 0%, rgba(0, 57, 166, 1) 51%, rgba(255, 255, 255, 1) 100%);
-        color: black;
-    }
-    
-}
 
-@media (min-width: 750px) {
-    main {
-        background-color: black;
-        color: white;
-    }
-}
 
 body, html {
     font-family: Arial, Helvetica, sans-serif;
@@ -81,14 +67,17 @@ header a:hover {
 }
 
 main {
-    background-color: black;
+    background: rgb(213, 43, 30);
+    background: linear-gradient(45deg, rgba(213, 43, 30, 1) 0%, rgba(0, 57, 166, 1) 51%, rgba(255, 255, 255, 1) 100%);
+    color: black;
+    
     width: 100%;
     height: auto;
 }
 
 main a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 main a:hover {
@@ -211,6 +200,10 @@ img {
 }
 
 .flags {
+    color: white;
+}
+.flags a {
+    text-decoration: none;
     color: white;
 }
 
