--- a/country/ukraine/style.css
+++ b/country/ukraine/style.css
@@ -65,8 +65,9 @@ header a:hover {
 }
 
 main {
-    background-color: black;
-    color: white;
+    background: rgb(255,204,0);
+    background: linear-gradient(0deg, rgba(255,204,0,1) 49%, rgba(0,102,204,1) 51%);
+    color: black;
     width: 100%;
     height: auto;
 }
@@ -124,10 +125,15 @@ footer a:hover {
 .photo {
     float: right;
     /* Обтекание картинки по левому краю */
-    padding-left: 10px;
+    margin-left: 10px;
     /* Отступ слева */
-    padding-bottom: 10px;
+    margin-bottom: 10px;
     /* Отступ снизу */
+    border-radius: 20px;
+        border: solid 1px;
+        width: 150px;
+        padding: 10px;
+        background: rgba(0, 0, 0, 0.39);
 }
 
 #ussr {
@@ -138,7 +144,7 @@ footer a:hover {
 }
 
 .ussr {
-    color: white;
+    color: black;
 }
 
 audio {
@@ -152,9 +158,7 @@ audio {
     height: 20px;
     background: #7fee1d;
 }
-.photo{
-    float: right; /* Обтекание картинки по левому краю */
-    padding-left: 10px; /* Отступ слева */
-    padding-bottom: 10px; /* Отступ снизу */
-    width: 150px;
-} 
+.trf{
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.39);
+}
