--- a/country/dni/style.css
+++ b/country/dni/style.css
@@ -74,3 +74,15 @@ img{
     background: blue;
 
 }
+
+div a {
+    text-decoration: none;
+    color: white;
+    margin: 2%;
+}
+
+div a:hover {
+    text-decoration: none;
+    color: red;
+    margin: 2%;
+}
