--- a/contacts/style.css
+++ b/contacts/style.css
@@ -1,9 +1,9 @@
-*{
+* {
     margin: 0%;
     padding: 0%;
 }
-body, html{
-    
+
+body, html {
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
     background-color: black;
@@ -11,7 +11,7 @@ body, html{
     height: 100%;
 }
 
-header{
+header {
     color: white;
     background-color: #155a15;
     width: 100%;
@@ -22,7 +22,8 @@ header{
     align-items: center;
     flex-wrap: wrap;
 }
-header div{
+
+header div {
     color: white;
     background-color: #1c771c;
     width: 100%;
@@ -32,30 +33,33 @@ header div{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    
-    
 }
-header a{
+
+header a {
     text-decoration: none;
     color: white;
     margin: 2%;
 }
-div a{
+
+div a {
     text-decoration: none;
     color: white;
     margin: 2%;
 }
-div a:hover{
+
+div a:hover {
     text-decoration: none;
     color: red;
     margin: 2%;
 }
-#id{
+
+#id {
     text-decoration: none;
     color: red;
     margin: 2%;
 }
-#nav-country{
+
+#nav-country {
     color: white;
     background-color: #155a15;
     width: 100%;
@@ -66,173 +70,197 @@ div a:hover{
     align-items: center;
     flex-wrap: wrap;
 }
-header a:hover{
+
+header a:hover {
     text-decoration: none;
     color: red;
 }
 
-main{
-    background-color:black;
-    color:white;
+main {
+    background: rgb(9,94,121);
+    background: linear-gradient(90deg, rgba(9,94,121,1) 0%, rgba(0,22,36,1) 100%);
+        color: wheat;
     width: 100%;
     height: auto;
-   
-
 }
-p{
+
+p {
     text-indent: 30px;
 }
-#gimn{
+
+#gimn {
     margin-left: 15%;
     margin-right: 15%;
 }
-h1{
+
+h1 {
     margin-left: 20%;
     margin-right: 20%;
 }
-h2{
+
+h2 {
     margin-left: 20%;
     margin-right: 20%;
 }
-h3{
+
+h3 {
     margin-left: 20%;
     margin-right: 20%;
     font-weight: 600;
     text-align: center;
 }
-hr{
+
+hr {
     color: white;
 }
-footer{
+
+footer {
     width: 100%;
     height: auto;
-    background: #dad9d9 ;
+    background: #dad9d9;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
 }
-footer a{
+
+footer a {
     text-decoration: none;
     font-size: 15px;
     color: #3d3d3d;
 }
-footer a:hover{
+
+footer a:hover {
     text-decoration: none;
     color: red;
 }
-.photo{
-    float: right; /* Обтекание картинки по левому краю */
-    padding-left: 10px; /* Отступ слева */
-    padding-bottom: 10px; /* Отступ снизу */
-    width: 250px;
-} 
-.photol{
-    float: left; /* Обтекание картинки по левому краю */
-    padding-left: 10px; /* Отступ слева */
-    padding-bottom: 10px; /* Отступ снизу */
+
+.photo {
+    float: right;
+    /* Обтекание картинки по левому краю */
+    padding-left: 10px;
+    /* Отступ слева */
+    padding-bottom: 10px;
+    /* Отступ снизу */
     width: 250px;
 }
 
-#ussr{
-    padding-left:0px; /* Отступ слева */
-    padding-bottom: 0px; /* Отступ снизу */
+.photol {
+    float: left;
+    /* Обтекание картинки по левому краю */
+    padding-left: 10px;
+    /* Отступ слева */
+    padding-bottom: 10px;
+    /* Отступ снизу */
+    width: 250px;
 }
 
-.ussr{
+#ussr {
+    padding-left: 0px;
+    /* Отступ слева */
+    padding-bottom: 0px;
+    /* Отступ снизу */
+}
+
+.ussr {
     background-color: black;
     color: white;
 }
 
-
-.center{
+.center {
     text-align: center;
 }
-.center a{
+
+.center a {
     margin: 0px;
 }
-.center a:hover{
+
+.center a:hover {
     margin: 0px;
 }
-.gimn{
+
+.gimn {
     text-align: center;
 }
-.flags{
+
+.flags {
     color: white;
 }
-.president{
+
+.president {
     color: white;
-background: rgb(51, 51, 51) ;
-
-border-radius: 40px;
-animation: presid 5s infinite;
-display: flex;
-justify-content: space-around;
-align-items: center;
-flex-wrap: wrap;
-
-
+    background: rgb(51, 51, 51);
+    border-radius: 40px;
+    animation: presid 5s infinite;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
-@keyframes presid{
-    0%{
+
+@keyframes presid {
+    0% {
         background: white;
         color: black;
     }
-    25%{
+    25% {
         background: #0039A6;
         color: white;
     }
-    50%{
+    50% {
         background: #D52B1E;
         color: white;
     }
-    75%{
+    75% {
         background: #0039A6;
         color: white;
     }
-    100%{
+    100% {
         background: white;
         color: black;
     }
 }
-.elsin{
 
+.elsin {
     text-align: center;
-    
-    
 }
-.putin{
-    text-align: center;
-    margin: 1%;
-}
-.medvedev{
+
+.putin {
     text-align: center;
     margin: 1%;
 }
-.ty{
+
+.medvedev {
+    text-align: center;
+    margin: 1%;
+}
+
+.ty {
     text-indent: 0px;
 }
+
 .pres {
     border-radius: 20px;
     border: solid 5px;
-    border-color:  red;
+    border-color: red;
     width: 250px;
     animation: prewe 5s infinite;
 }
-@keyframes prewe{
-    0%{
-        border-color:  red;
+
+@keyframes prewe {
+    0% {
+        border-color: red;
     }
-    25%{
-        border-color:  red;
+    25% {
+        border-color: red;
     }
-    50%{
+    50% {
         border-color: #0039A6;
     }
-    75%{
-        border-color:  red;
+    75% {
+        border-color: red;
     }
-    100%{
-        border-color:  red;
+    100% {
+        border-color: red;
     }
 }
