--- a/country/belarus/gos-simvolika/style.css
+++ b/country/belarus/gos-simvolika/style.css
@@ -71,7 +71,8 @@ header a:hover {
 }
 
 main {
-    background-color: black;
+    background: rgb(0,175,102);
+    background: linear-gradient(45deg, rgba(0,175,102,1) 45%, rgba(210,38,48,1) 55%);
     color: white;
     width: 100%;
     height: auto;
@@ -150,7 +151,7 @@ img {
 }
 
 .ussr {
-    background-color: black;
+    
     color: white;
 }
 
@@ -160,7 +161,7 @@ img {
 
 .president {
     color: white;
-    background-color: rgb(51, 51, 51);
+    
     border: solid 5px;
     border-radius: 20px;
     text-align: center;
@@ -177,4 +178,8 @@ img {
     border-color: red;
     width: 250px;
     animation: prewe 5s infinite;
+}
+audio::-webkit-media-controls-panel {
+    background: rgb(0,175,102);
+    background: linear-gradient(315deg, rgba(0,175,102,1) 45%, rgba(210,38,48,1) 55%);
 }
