--- a/country/style.css
+++ b/country/style.css
@@ -14,7 +14,8 @@ body, html {
 
 
 main {
-    background-color: black;
+    background: rgb(120,121,9);
+    background: linear-gradient(90deg, rgba(120,121,9,1) 0%, rgba(122,0,0,1) 100%);
     color: white;
     width: 100%;
     height: auto;
@@ -61,7 +62,7 @@ h3 {
 }
 
 .ussr {
-    background-color: black;
+ 
     color: white;
 }
 
