--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-*{
+* {
     margin: 0%;
     padding: 0%;
 }
-body, html{
-    
+
+body, html {
     font-family: Arial, Helvetica, sans-serif;
     text-align: auto;
     background-color: black;
@@ -11,7 +11,7 @@ body, html{
     height: 100%;
 }
 
-header{
+header {
     color: white;
     background-color: #155a15;
     width: 100%;
@@ -21,10 +21,9 @@ header{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-
-    
 }
-header div{
+
+header div {
     color: white;
     background-color: #1c771c;
     width: 100%;
@@ -34,20 +33,21 @@ header div{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    
-    
 }
-header a{
+
+header a {
     text-decoration: none;
     color: white;
     margin: 2%;
 }
-#id{
+
+#id {
     text-decoration: none;
     color: red;
     margin: 2%;
 }
-#nav-country{
+
+#nav-country {
     color: white;
     background-color: #155a15;
     width: 100%;
@@ -58,94 +58,106 @@ header a{
     align-items: center;
     flex-wrap: wrap;
 }
-header a:hover{
+
+header a:hover {
     text-decoration: none;
     color: red;
 }
 
-main{
-    background-color:black;
-    color:white;
+main {
+    background: rgb(120, 121, 9);
+    background: linear-gradient(90deg, rgba(120, 121, 9, 1) 0%, rgba(122, 0, 0, 1) 100%);
+    color: white;
     width: 100%;
     height: auto;
-   
-
 }
-main p{
-    margin-left: 15% ;
-    margin-right: 15% ;
+
+main p {
+    margin-left: 15%;
+    margin-right: 15%;
     text-indent: 30px;
 }
-#gimn{
+
+#gimn {
     margin-left: 15%;
     margin-right: 15%;
 }
-h1{
+
+h1 {
     margin-left: 20%;
     margin-right: 20%;
 }
-h2{
+
+h2 {
     margin-left: 20%;
     margin-right: 20%;
 }
-h3{
+
+h3 {
     margin-left: 20%;
     margin-right: 20%;
     font-weight: 600;
 }
-hr{
+
+hr {
     color: white;
 }
-footer{
+
+footer {
     width: 100%;
     height: auto;
-    background: #dad9d9 ;
+    background: #dad9d9;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-
 }
-footer a{
+
+footer a {
     text-decoration: none;
     font-size: 15px;
     color: #3d3d3d;
 }
-footer a:hover{
+
+footer a:hover {
     text-decoration: none;
     color: red;
 }
-img{
+
+img {
     border-radius: 20px;
     width: 100%;
-} 
-#ussr{
-    padding-left:0px; /* Отступ слева */
-    padding-bottom: 0px; /* Отступ снизу */
 }
 
+#ussr {
+    padding-left: 0px;
+    /* Отступ слева */
+    padding-bottom: 0px;
+    /* Отступ снизу */
+}
 
-audio{
+audio {
     border-radius: 0px;
     margin-left: 20%;
     margin-right: 20%;
 }
-.player video{
+
+.player video {
     position: absolute;
-   
 }
-video{
+
+video {
     border-radius: 25px;
 }
-.polzovatel{
-    
-    height: auto;
-    
-}
-.country{
+
+.polzovatel {
     height: auto;
 }
-ul{
-    
+
+.country {
+    height: auto;
+}
+
+ul {
     list-style: none;
 }
