--- a/country/ukraine/style.css
+++ b/country/ukraine/style.css
@@ -89,6 +89,6 @@ hr {
     background: rgba(161, 161, 161, 0.39);
 }
 audio::-webkit-media-controls-panel {
-    background: rgb(255,204,0);
-    background: linear-gradient(315deg, rgba(255,204,0,1) 40%, rgba(0,102,204,1) 60%);
+    background: rgb(255,214,0);
+    background: linear-gradient(0deg, rgba(255,214,0,1) 0%, rgba(255,214,0,1) 50%, rgba(0,91,188,1) 50%, rgba(0,91,188,1) 100%);
 }
