--- a/country/vremenno.css
+++ b/country/vremenno.css
@@ -1,7 +1,9 @@
 body{
-    color: white;
-    background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
+  
+    background: rgb(214,39,24);
+background: linear-gradient(90deg, rgba(214,39,24,1) 0%, rgba(143,44,74,1) 33%, rgba(0,54,167,1) 33%, rgba(0,54,167,1) 67%, rgba(255,255,255,1) 67%, rgba(255,255,255,1) 100%);
+   background-size: 100%;
+font-family: Arial, Helvetica, sans-serif;
     font-size: 2vh;
 }
 a{
