--- a/country/ussr/style.css
+++ b/country/ussr/style.css
@@ -16,11 +16,11 @@ body, html {
 
 
 main {
-    background: rgb(213, 43, 30);
-    background: linear-gradient(45deg, rgba(213, 43, 30, 1) 0%, rgba(0, 57, 166, 1) 51%, rgba(255, 255, 255, 1) 100%);
-    color: white;
+   /* background: rgb(213, 43, 30);
+    background: linear-gradient(45deg, rgba(213, 43, 30, 1) 0%, rgba(0, 57, 166, 1) 51%, rgba(255, 255, 255, 1) 100%);*/
+    color: black;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 main a {
