--- a/country/russia/gos-simvolika/style.css
+++ b/country/russia/gos-simvolika/style.css
@@ -34,7 +34,7 @@ main a:hover {
     color: red;
 }
 
-p {
+main p {
     text-indent: 30px;
 }
 
@@ -247,4 +247,12 @@ img {
 audio::-webkit-media-controls-panel {
     background: rgb(214,39,24);
     background: linear-gradient(0deg, rgba(214,39,24,1) 0%, rgba(143,44,74,1) 33%, rgba(0,54,167,1) 33%, rgba(0,54,167,1) 67%, rgba(255,255,255,1) 67%, rgba(255,255,255,1) 100%);
+}
+
+.fr{
+    width: 20px;
+    border-radius: 0px;
+}
+.fr:hover{
+    width: 30px;
 }
