--- a/country/main.css
+++ b/country/main.css
@@ -29,6 +29,7 @@ header a {
     color: white;
     margin: 2%;
 }
+
 #id {
     text-decoration: none;
     color: red;
@@ -52,10 +53,11 @@ header a:hover {
     color: red;
 }
 
-main{
+main {
     font-family: 'Bellota', cursive;
     font-size: 16px;
 }
+
 footer {
     width: 100%;
     height: auto;
@@ -66,7 +68,6 @@ footer {
     flex-wrap: wrap;
     font-family: 'Bellota', cursive;
     color: white;
-
 }
 
 footer a {
@@ -79,15 +80,51 @@ footer a:hover {
     text-decoration: none;
     color: red;
 }
-footer p{
+
+footer p {
     text-indent: 0px;
 }
-.fr{
+
+.fr {
     width: 30px;
     border-radius: 0px;
 }
-.fr:hover{
+
+.fr:hover {
     width: 40px;
 }
 
 
+
+.rus {
+    background: rgb(214, 39, 24);
+    background: linear-gradient(315deg, rgba(214, 39, 24, 1) 0%, rgba(143, 44, 74, 1) 33%, rgba(0, 54, 167, 1) 33%, rgba(0, 54, 167, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+    color: black;
+    animation: tyr 4s infinite;
+}
+
+.rus a {
+    color: black;
+}
+
+.rus a:hover {
+    color: black;
+
+}
+
+@keyframes tyr {
+
+    0% {
+        background: rgb(219, 13, 32);
+        background: linear-gradient(0deg, rgba(219, 13, 32, 1) 0%, rgba(219, 13, 32, 1) 33%, rgba(1, 141, 233, 1) 33%, rgba(1, 141, 233, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+    }
+    25% {
+        background: rgb(214, 39, 24);
+        background: linear-gradient(0deg, rgba(214, 39, 24, 1) 0%, rgba(143, 44, 74, 1) 33%, rgba(0, 54, 167, 1) 33%, rgba(0, 54, 167, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+    }
+    100% {
+        background: rgb(219, 13, 32);
+        background: linear-gradient(0deg, rgba(219, 13, 32, 1) 0%, rgba(219, 13, 32, 1) 33%, rgba(1, 141, 233, 1) 33%, rgba(1, 141, 233, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+    }
+   
+}
